<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.renomad</groupId>
    <artifactId>minum</artifactId>
    <version>VERSION</version>
    <packaging>jar</packaging>

    <name>Minum web framework</name>
    <description>A minimalist web framework</description>
    <url>https://github.com/byronka/minum</url>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:git://github.com/byronka/minum.git</connection>
        <developerConnection>scm:git:ssh://github.com:byronka/minum.git</developerConnection>
        <url>https://github.com/byronka/minum/tree/master</url>
    </scm>

    <properties>
        <maven.compiler.release>20</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- None! -->
    </dependencies>

    <developers>
        <developer>
            <name>Byron Katz</name>
            <email>byronka@msn.com</email>
            <organization>Renomad</organization>
            <organizationUrl>http://www.renomad.com</organizationUrl>
        </developer>
    </developers>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <enablePreview>true</enablePreview>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.1.2</version>
                <configuration>
                    <argLine>--enable-preview</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>